bk_ida/gccida/c3/loop_givs_reduce
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_givs_reduce/src/loop.c:5021:1: error: use of undeclared identifier 'induction_1'
induction_1 *tv; // [rsp+20h] [rbp-20h] 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_givs_reduce/src/loop.c:5021:14: error: use of undeclared identifier 'tv'
induction_1 *tv; // [rsp+20h] [rbp-20h] 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_givs_reduce/src/loop.c:5022:1: error: use of undeclared identifier 'induction_1'
induction_1 *v; // [rsp+28h] [rbp-18h] 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_givs_reduce/src/loop.c:5022:14: error: use of undeclared identifier 'v'
induction_1 *v; // [rsp+28h] [rbp-18h] 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_givs_reduce/src/loop.c:5024:7: error: use of undeclared identifier 'v'
for ( v = bl_0->giv; v; v = v->next_iv ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_givs_reduce/src/loop.c:5024:22: error: use of undeclared identifier 'v'
for ( v = bl_0->giv; v; v = v->next_iv ) 
                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_givs_reduce/src/loop.c:5024:25: error: use of undeclared identifier 'v'
for ( v = bl_0->giv; v; v = v->next_iv ) 
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_givs_reduce/src/loop.c:5024:29: error: use of undeclared identifier 'v'
for ( v = bl_0->giv; v; v = v->next_iv ) 
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_givs_reduce/src/loop.c:5026:23: error: use of undeclared identifier 'v'
if ( ( ( *( ( _WORD *)v + 50) >> 2) & 1) == 0 && !v->same ) 
                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_givs_reduce/src/loop.c:5026:51: error: use of undeclared identifier 'v'
if ( ( ( *( ( _WORD *)v + 50) >> 2) & 1) == 0 && !v->same ) 
                                                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_givs_reduce/src/loop.c:5028:7: error: use of undeclared identifier 'v'
if ( !v->new_reg ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_givs_reduce/src/loop.c:5029:1: error: use of undeclared identifier 'v'
v->new_reg = gen_reg_rtx( v->mode); 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_givs_reduce/src/loop.c:5029:27: error: use of undeclared identifier 'v'
v->new_reg = gen_reg_rtx( v->mode); 
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_givs_reduce/src/loop.c:5030:7: error: use of undeclared identifier 'tv'
for ( tv = bl_0->biv; tv; tv = tv->next_iv ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_givs_reduce/src/loop.c:5030:23: error: use of undeclared identifier 'tv'
for ( tv = bl_0->biv; tv; tv = tv->next_iv ) 
                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_givs_reduce/src/loop.c:5030:27: error: use of undeclared identifier 'tv'
for ( tv = bl_0->biv; tv; tv = tv->next_iv ) 
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_givs_reduce/src/loop.c:5030:32: error: use of undeclared identifier 'tv'
for ( tv = bl_0->biv; tv; tv = tv->next_iv ) 
                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_givs_reduce/src/loop.c:5032:17: error: use of undeclared identifier 'tv'
insert_before = tv->insn; 
                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_givs_reduce/src/loop.c:5033:6: error: use of undeclared identifier 'tv'
if ( tv->mult_val == const_int_rtx[65] ) 
     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/loop_givs_reduce/src/obj/loop.o] Error 1
